<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    android:id="@+id/fragment_ajustes"
    android:orientation="vertical"
    tools:context=".fragments.FragmentAjustes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/ajustes"
            android:textSize="26dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:textColor="?attr/textFillColor"/>

        <!-- Idiomas -->
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_idioma"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:id="@+id/spinnerIdiomas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- Unidades -->
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidad_de_peso"
                android:textStyle="bold"
                android:textColor="?attr/textFillColor"
                android:textSize="18dp"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:id="@+id/spinnerUnidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- Notificaciones -->
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificaciones"
                android:textStyle="bold"
                android:textColor="?attr/textFillColor"
                android:textSize="18dp"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:id="@+id/spinnerNotificaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <!-- Notificaciones -->
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tema"
                android:textStyle="bold"
                android:textColor="?attr/textFillColor"
                android:textSize="18dp"
                android:layout_alignParentStart="true"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTheme"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/Widget.Material3.CompoundButton.MaterialSwitch" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pol_tica_de_privacidad"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajustes_de_privacidad"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminos_de_servicio"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="?attr/textFillColor"
                android:layout_alignParentStart="true"/>


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>