<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentPerfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".fragments.FragmentPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textSize="26dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:textColor="?attr/textFillColor"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0A69A2FF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingLeft="15dp"
                android:orientation="horizontal">

                <!-- Media -->
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/perfil_usuario"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/nombreUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="?attr/textFillColor"
                        android:textStyle="bold"
                        android:text="Daniel"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14dp"
                        android:text="@string/n_mero_de_entrenamientos"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?attr/textFillColor" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="?attr/textFillColor"
            android:textStyle="bold"
            android:text="@string/editar_perfil">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NombreUsuario"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nombre_de_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailUsuario"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/correo_electronico">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ObjetivoUsuario"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/objetivo_opcional">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonChangePswd"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.Button"
            android:textColor="@color/white"
            android:backgroundTint="@color/secondaryBlue"
            android:text="@string/cambiar_contrasena" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="?attr/textFillColor"
            android:textColor="?attr/backgroundColor"
            android:text="@string/cerrar_sesi_n" />

    </LinearLayout>

</LinearLayout>