<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_entrenamiento"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentEntrenamiento">

    <!-- Contenedor principal-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/empezar_entrenamiento"
            android:textSize="26dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textColor="?attr/textFillColor"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/inicio_rapido"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="25dp"
            android:textColor="?attr/textFillColor"/>

        <Button
            android:id="@+id/buttonEntrenamiento"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.Button"
            android:textColor="@color/white"
            android:backgroundTint="@color/secondaryBlue"
            android:text="@string/empezar_entrenamiento_vacio" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/mis_plantillas"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_weight="5"
                android:textColor="?attr/textFillColor"/>

            <ImageView
                android:id="@+id/btnNuevaPlantilla"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/add_icon"
                android:layout_weight="1"
                app:tint="?attr/textFillColor">

            </ImageView>

        </LinearLayout>

        <GridView
            android:id="@+id/gridViewTemplates"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:numColumns="2"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/plantillas_base"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textSize="16dp"
            android:textColor="?attr/textFillColor"/>

        <GridView
            android:id="@+id/gridViewTemplates2"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:numColumns="2"/>

    </LinearLayout>

</ScrollView>